Added new section and changed FPGA.tex

--- a/Rapport/content/FPGA.tex
+++ b/Rapport/content/FPGA.tex
@@ -10,6 +10,8 @@ projektformuleringen.
 
 
 \subsection{VALG?!?!}
+Eftersom de fleste krav til FPGAen er givet af projektbeskrivelsen er der ikke 
+lavet noget større 
 \subsubsection*{PWM}
 Der skal fra FPGA'en genereres PWM signaler til at styre motorerne på PTS.
 Det ønskedes at have en PWM frekvens, der ikke ligger i det hørbare område. 
@@ -27,7 +29,6 @@ På figur \ref{fig:FPGA_blok} ses opbygningen på FPGAen. De grønne bokse angiv
 komponenter på FPGAen, mens de grå cirkler angiver hvad, der ikke ligger på 
 FPGAens chip. Pilene imellem FPGAens komponenter angiver i hvilken retning der 
 kommer data.
-
 
 
 \begin{figure}[!th]
