--- a/Rapport/master_doc.tex
+++ b/Rapport/master_doc.tex
@@ -24,6 +24,7 @@
 \include{./content/koordinattransformation}
 \include{./content/kontrollerdesign}
 \include{./content/Mikrocontroller}
+\include{./content/kommunikation_mellem_mikrocontroller_og_FPGA}
 \include{./content/FPGA}
 
 
