Opsummering af parameter app A6

--- a/Rapport/content/app_DCmotor.tex
+++ b/Rapport/content/app_DCmotor.tex
@@ -438,3 +438,25 @@ og giver et nøjagtigt billede af den tilstedeværende friktion samt rotorens in
 Rotorens inertimoment er bestemt til \(J_m=8,26\cdot10^{-4}\) \([\text{kg}\cdot{\text{m}^2}]\).
 Friktionskraftmomentet er bestemt til \(\left| { T }_{ f } \right| =0,0571\) \( [\text{N} \cdot \text{m}]\).
 \subsection{Opsummering af DC motorparameter}
+
+Her bliver de forskellige 
+
+
+
+
+\begin{figure}[th!]
+\centering
+\begin{tabular}{c}
+DC motor parameter \\\hline
+ad \\
+ad \\
+ad \\
+ad \\
+\end{tabular}
+\captionsetup{type=table}
+\caption[tekst i indholdsfortegnelsen]{tabeltekst}
+\label{tb:}
+\end{figure}
+
+
+
