--- a/Rapport/graphics/3d_in_xyz_plane.tex
+++ b/Rapport/graphics/3d_in_xyz_plane.tex
@@ -10,9 +10,9 @@
 
 
 %draw the main coordinate system axes
-\draw[->] (-1,0,0) -- (1,0,0) node[right]{\(X\)};
-\draw[->] (O) -- (0,0.75,0) node[above]{\(Y\)};
-\draw[->] (0,0,-1) -- (0,0,1) node[below]{\(Z\)};
+\draw[->] (-1,0,0) -- (1,0,0) node[right]{\(Y\)};
+\draw[->] (O) -- (0,0.75,0) node[above]{\(Z\)};
+\draw[->] (0,0,-1) -- (0,0,1) node[below]{\(X\)};
 
 %draw a vector from origin to point (P) 
 \draw[-stealth,color=red] (O) -- (P);
