--- a/Rapport/master_doc.tex
+++ b/Rapport/master_doc.tex
@@ -25,7 +25,7 @@
 \include{./content/kontrollerdesign}
 \include{./content/Mikrocontroller}
 \include{./content/FPGA}
-
+\include{./content/kommunikation_mellem_mikrocontroller_og_FPGA}
 
 
 
