Fjernet indentation ved par skift

--- a/Rapport/master_doc.tex
+++ b/Rapport/master_doc.tex
@@ -13,6 +13,10 @@
 \fancyfoot[LO,CE]{}
 \fancyfoot[CO,RE]{}
 
+% Disable indentation
+\setlength{\parindent}{0pt}
+\setlength{\parskip}{0.7\baselineskip}%
+
 %%%%%%%%% RAPPORTENS KAPTILER BEGYNDER!!!
 \include{./content/forkortelser}
 \include{./content/forord}
