--- a/Rapport/content/kommunikation_mellem_mikrocontroller_og_FPGA.tex
+++ b/Rapport/content/kommunikation_mellem_mikrocontroller_og_FPGA.tex
@@ -1,46 +1,31 @@
 \section{Kommunikation mellem mikrocontroller og FPGA}
 
-Kommunikationen mellem Microcontolleren og FPGA’en sker med SPI. SPI står for Serial Peripheral Interface. Det er en protokol hvor, der bliver overført data mellem en master og en eller flere slaver. Overførelsen sker i full duplex mode, så der bliver sendt data både fra masteren og slaven på samme tid.
-Der er fire forbindelse mellem masteren og slaverne: Slave Select, Serial CLock (SCLK), MOSI og MISO. Slave Select bruges bruges til at vælge hvilken slave der skal overføres data med. Den kan også sammenlignes med en chip select. SCLK bruges som clock frekvens, som synkronisere Salve select, MOSI og MISO. MOSI står for Master Output Slave Input, det er dataet master sender til slaven, ligeså er MISO Master Input Slave Output, som er dataet som, master modtager fra slaven.
-Når der er flere end en slave, deler de SCLK, MOSI og MISO, men de har en Slave Select hver. Forløbet er sådan at master sender et SS signal til den ønskede slave. De slaver der ikke har modtaget et SS signal ingnorer det der bliver sendt på MOSI og MISO. I et system kun med en slave kan SS udelades, da der kun er en slave at vælge. 
+Kommunikationen mellem Micro contolleren og FPGA’ensker med SPI. SPI står for Serial Peripheral Interface. Det er en protokol hvor, der bliver overført data mellem en master og en eller flere slaver. Overførelsen sker i full duplex mode, så der bliver sendt data både fra masteren og slaven på samme tid.
+
+Der er fire forbindelse mellem masteren og slaverne: Slave Select, Serial CLock (SCLK), MOSI og MISO. Slave Select bruges til at vælge hvilken slave der skal overføres data med. Den kan også sammenlignes med en chip select. SCLK bruges som clock frekvens, som synkronisere Salve Select, MOSI og MISO. MOSI står for Master Output Slave Input, det er dataet master sender til slaven, ligeså er MISO Master Input Slave Output, som er dataet, som master modtager fra slaven.
+
+Når der er flere end en slave, deler de SCLK, MOSI og MISO, men de har en Slave Select hver. Forløbet er sådan at master sender et SS signal til den ønskede slave. De slaver der ikke har modtaget et SS signal ignorer det der bliver sendt på MOSI og MISO. I et system kun med en slave kan SS udelades, da der kun er en slave at vælge. 
+ 
 
 \subsection{Overvejelser og valg}
-Der er gået mange overvejelser i hvordan SPI'en mellem Microcontrollren og FPGA'en skal  opbygges.
+Der er gået mange overvejelser i hvordan SPI'en mellem Micro controlleren og FPGA'en skal  opbygges.
+
 Det blev vedtaget at Micocontrolleren var masteren og FPGA blev slaven, da FPGA'en helst skulle være så enkel som mulig.
-Microcontrolleren har også indbygget tre SPI programmer, hvor den kan være masteren. De tre typer er TI Synchronous Serial Frame Format (SSFT), Freescale og Microwire. Til at overfører dataene mellem Microcontrolleren og FPGA’en skal der bruges en enkel protokol med full duplex. Hovedgrundene for at protokollen skal være enkel, er at der ikke sendes meget data, dataene er enkel og afstanden den sendes er kort. Derfor blev SSFT valgt som protokol. I SSFT liggre svaret på nogle af overvejelserne. Overvejelserne har været om MOSI skal trigger på rising eller falling edge, og hvordan Slave Select skulle opføre sig.   
-Frekvensen af SCLK skal vælges så høj, at SPI ikke bliver en flaskehals i kommunikationen mellem Microcontroller og FPGA’en, og tilpas lav, så der ikke introduceres unødige fejlkilder, ved at FPGA’en ikke kan følge med. 
-Størrelsen af framen, som sendes skulle være så stor at PWM (duty cycle?) kan sendes til FPGA’en og ticksne fra FPGA’en kan sendes i den rigtige opløsning. PWM og ticks har begge en størrekse af 11 bit, der skal også være et motor, retnings- og feedback bit.  Det giver at framen mindst skal være 14 bit lang. Microcontrolleren understøtter en størrelse mellem fire og 16 bit, 16 bit blev valgt da der så er plads til at udbygge.
+
+Micro controlleren har også indbygget tre SPI programmer, hvor den kan være masteren. De tre typer er TI Synchronous Serial Frame Format (SSFT), Freescale og Microwire. Til at overfører dataene mellem Micro controlleren og FPGA’en skal der bruges en enkel protokol med full duplex. Hovedgrundene for at protokollen skal væe enkel, er at der ikke sendes meget data, dataene er enkel og afstanden den sendes er kort. Derfor blev SSFT valgt som protokol. I SSFT liggre svaret på nogle af overvejelserne. Overvejelserne har været om MOSI skal trigger på rising eller falling edge, og hvordan Slave Select skulle opføre sig.
+
+Frekvensen af SCLK skal vælges så høj, at SPI ikke bliver en flaskehals i kommunikationen mellem Micro controller og FPGA’en, og tilpas lav, så der ikke introduceres unødige fejlkilder, ved at FPGA’en ikke kan følge med.
+
+Størrelsen af framen, som sendes skulle være så stor at PWM kan sendes til FPGA’en og ticksne fra FPGA’en kan sendes i den rigtige opløsning. PWM og ticks har begge en størrelse af 11 bit, der skal også være et motor, retnings- og feedback bit.  Det giver at framen mindst skal være 14 bit lang. Micro controlleren understøtter en størrelse mellem fire og 16 bit, 16 bit blev valgt da der så er plads til at udbygge.
 
 
 
 \subsection{Brugen af SPI}
 
+For at lave SPI på Microcontrolleren, bruges versionen SSFT. Den bruger fire pins ved overførelse af data: SSIClk, SSIFss, SSITx og SSIRx. SSI står for Synchronous Serial Interface, som er Micro controlleren version af SPI. SSIClk er SCLK, SSIFss er Slave Select, SSITx er MOSI og SSIRx er MISO.
 
-%%% FORMAT SPI
+Forløbet for en overførelse er SLCK en puls mere end besked størelsen er lang. Da der i denne opgave er en beskedstørrelse på 16 bit, så har SLCK 17 pulser. Ved den første puls sættes Slave Select høj, men sættes lav igen ved falling edge på SCLK. Bagefter sendes de 16 bit synkront med SCLK. Hver gang der er rising edge på SCLK sendes et bit, FPGA’en aflæser bitten på falling edge på SCLK, da MOSI har haft tid til at omstille sig til høj eller lav.
 
-Fra Mikrokontroller til FPGA format:
-\begin{figure}[th!]
-\centering
-\begin{tabular}{c|c|c|c|c}
-1 motorbit &1 retningsbit & 1 set PWMbit & 2 ignorebits & 11 PWM dutycyclebits
+SPI på FPGA’en er meget enkel, det er to shift registre, en til MOSI og en til MISO. På Micro controlleren kommer dataene fra en FIFO buffer. Det er FIFO bufferen der shifter det mest betydende bit (MSB) ned på MOSI. På FPGA’en bliver MOSI shiftet ind i et shift register, så det passer med at MSB er MSB’s plads. På FGPA’en er det MSB den sender først til MISO. Når Slave Select er høj bliver der ikke overførst data, derfor er det når den er høj, hvor der bliver flyttet data rundt, da der man så ikke flytter data for tidligt eller sendt. 
 
-\end{tabular}
-\captionsetup{type=figure}
-\caption[tekst i indholdsfortegnelsen]{tabeltekst}
-\label{tb:}
-\end{figure}
-
-
-
-
-Fra FPGA til Mikrokontroller format:
-\begin{figure}[th!]
-\centering
-\begin{tabular}{c|c|c|c}
-1 motorbit & 4 ignorebits & 11 decoderbits
-
-\end{tabular}
-\captionsetup{type=figure}
-\caption[tekst i indholdsfortegnelsen]{tabeltekst}
-\label{tb:}
-\end{figure}
+Det er en enkel protokol som bliver brugt uden tjeksum eller nogen anden form for administration der bliver brugt. Frame størrelse er på 16 bit. På figur ?? kan man se opbygningen af både framen der bliver sendt til FPGA’en og til Micro controlleren. Til FPGA’en bliver der sendt den PWM der skal sættes på den bestemte motor i den bestemte retning. Det er det motor- og retningsbittene bestemmer. Da SPI er full duplex skal der sendes data fra både Micro controlleren og FPGA’en, FPGA’en kan ikke sende data uden at Micro controlleren også gør det. På micro controlleren ville man gerne kunne få en position uden at den sætter en ny PWM. Derfor skal der bruges en bit, hvor FGPA’en kan se om den skal sætte PWM’en eller om den kun skal sende information tilbage. Der er det Feedback (Hvad det nu kaldes) bruges til. Hvis den er 1 bliver framen kasseret, men hvis den er lav bliver PWM’en sat.  
